--- a/Ejecutable/templates/intranet_home.html
+++ b/Ejecutable/templates/intranet_home.html
@@ -46,7 +46,11 @@
         />
       </div>
 
-      <a href="#" class="forgot-password">Olvidé mi contraseña</a>
+      <a
+        href="https://passwordreset.microsoftonline.com/Default.aspx"
+        class="forgot-password"
+        >Olvidé mi contraseña</a
+      >
 
       <!-- Controles de imágenes -->
       <div class="image-controls">
@@ -78,13 +82,17 @@
       </div>
 
       <!-- Botón Conocer tu usuario -->
-      <a href="#" class="conocer-usuario-button">Conoce tu usuario</a>
+      <a
+        href="https://passwordreset.microsoftonline.com/Default.aspx"
+        class="conocer-usuario-button"
+        >Conoce tu usuario</a
+      >
 
       <div class="follow-us-text">Síguenos en:</div>
 
       <div class="social-icons">
         <div class="social-icon-container">
-          <a href="https://www.instagram.com">
+          <a href="https://www.instagram.com/upsjb/">
             <img
               src="/static/images/ico_ig.png"
               class="social-icon"
@@ -93,7 +101,7 @@
           </a>
         </div>
         <div class="social-icon-container">
-          <a href="https://www.facebook.com">
+          <a href="https://www.facebook.com/UPSJBSAC">
             <img
               src="/static/images/ico_fb.png"
               class="social-icon"
@@ -102,7 +110,9 @@
           </a>
         </div>
         <div class="social-icon-container">
-          <a href="https://www.linkedin.com">
+          <a
+            href="https://www.linkedin.com/school/universidad-privada-san-juan-bautista/"
+          >
             <img
               src="/static/images/ico_in.png"
               class="social-icon"
@@ -111,7 +121,7 @@
           </a>
         </div>
         <div class="social-icon-container">
-          <a href="https://www.twitter.com">
+          <a href="https://x.com/UPSJB">
             <img
               src="/static/images/ico_twitter.png"
               class="social-icon"
@@ -120,7 +130,7 @@
           </a>
         </div>
         <div class="social-icon-container">
-          <a href="https://www.tiktok.com">
+          <a href="https://www.tiktok.com/@aprendeconlasanjuan">
             <img
               src="/static/images/ico_tiktok.png"
               class="social-icon"
