--- a/Ejecutable/templates/principal.html
+++ b/Ejecutable/templates/principal.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Interfaz Digital</title>
     <link rel="stylesheet" href="/static/css/principal.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
       <nav>
         <div class="logo">
-          <img src="/static/images/icono_principal.png" alt="Logo" />
+          <img src="/static/images/logo_terceario.png" alt="Logo" />
         </div>
         <ul>
           <li><a href="#">Blackboard</a></li>
@@ -40,6 +44,10 @@
         </ul>
       </aside>
       <main>
+        <div class="intro-text">
+          <h1 class="main-title">¿Qué quieres hacer hoy?</h1>
+          <h2 class="sub-title">Descubre todo lo que te ofrecemos de manera 100% digital</h2>
+        </div>
         <div class="cards">
           <div class="card">
             <h2>Requisitos</h2>
@@ -94,8 +102,82 @@
         </div>
       </main>
     </div>
+
+    <!-- Modal -->
+    <div id="myModal" class="modal">
+      <div class="modal-container">
+        <div class="modal-header">
+          <h2 class="modal-title">Noticias & Comunicados</h2>
+          <span class="close">&times;</span>
+        </div>
+        <!-- Contenedor de imágenes en el modal -->
+        <div class="inner-container">
+          <div class="carousel-container">
+            <a
+              href="https://mailing.upsjb.edu.pe/detalles-importantes-sobre-la-matricula-2024-i"
+              target="_blank"
+            >
+              <img
+                src="/static/images/banner.jpeg"
+                alt="Anuncio Publicitario"
+                class="carousel-image active"
+              />
+            </a>
+            <a
+              href="https://mailing.upsjb.edu.pe/comunicado-de-pensiones-2024-i-1"
+              target="_blank"
+            >
+              <img
+                src="/static/images/banner_pensiones.jpg"
+                alt="Banner Pensiones"
+                class="carousel-image"
+                style="display: none"
+              />
+            </a>
+            <a
+              href="https://mailing.upsjb.edu.pe/formas-de-pago"
+              target="_blank"
+            >
+              <img
+                src="/static/images/banner_pagos.png"
+                alt="Banner Pagos"
+                class="carousel-image"
+                style="display: none"
+              />
+            </a>
+            <a
+              href="https://mailing.upsjb.edu.pe/-temporary-slug-e549011f-f581-4e38-8c18-1ffbdb907718?hs_preview=AGwIeExP-135145694741"
+              target="_blank"
+            >
+              <img
+                src="/static/images/banner_DNI.png"
+                alt="Banner DNI"
+                class="carousel-image"
+                style="display: none"
+              />
+            </a>
+
+            <!-- Agrega las flechas de navegación fuera de los enlaces -->
+            <div class="carousel-arrow carousel-arrow-left" id="prev">
+              <img
+                src="/static/images/flecha_izquierda.png"
+                alt="Flecha izquierda"
+              />
+            </div>
+            <div class="carousel-arrow carousel-arrow-right" id="next">
+              <img
+                src="/static/images/flecha_derecha.png"
+                alt="Flecha derecha"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer>
+      <p>UPSJB © 2024. Todos los derechos reservados.</p>
+    </footer>
+    <script src="/static/scripts/principal.js"></script>
   </body>
-  <footer>
-    <p>UPSJB © 2024. Todos los derechos reservados.</p>
-  </footer>
 </html>
