--- a/Ejecutable/static/css/principal.css
+++ b/Ejecutable/static/css/principal.css
@@ -1,3 +1,4 @@
+/* Estilos generales del body */
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -9,6 +10,8 @@ body {
   overflow-x: hidden;
 }
 
+/* Estilos del header */
+/* Estilos del nav del header */
 header nav {
   display: flex;
   justify-content: space-between;
@@ -24,14 +27,75 @@ header nav {
   z-index: 1;
 }
 
+/* DISEÑO PARA EL ELEMENTO DE TV */
+header nav ul li {
+  margin-right: 20px;
+}
+
+header nav ul li img.tv-icon {
+  margin-right: 12.76px;
+  transform: scale(1.2) scaleX(1) scaleY(0.95) translateY(0.94px);
+}
+
+header nav ul li a {
+  letter-spacing: 0.5px;
+}
+
+header nav ul li:first-child {
+  transform: translateX(30px);
+}
+
+/* DISEÑO PARA EL ELEMENTO DE ZOOM */
+.zoom-item {
+  transform: translateX(40px);
+  display: flex;
+  align-items: center;
+  gap: 19px;
+}
+
+.zoom-icon {
+  transform: scale(1.2, 0.84) translate(1.6px, -1.4px);
+}
+
+/* DISEÑO PARA EL ELEMENTO DE ONEDRIVE */
+.onedrive-item {
+  transform: translateX(64.1px);
+  letter-spacing: 0.5px;
+}
+
+.onedrive-icon {
+  transform: scale(2.35, 1.1) translate(-5px, 2px);
+}
+
+/* DISEÑO PARA EL ELEMENTO CORREO */
+.correo-item {
+  transform: translateX(88.7px);
+}
+
+.correo-icon {
+  transform: scale(1.2, 0.96) translate(-10.5px, 1.2px);
+}
+
+/* DISEÑO PARA EL ELEMENTO REPOSITORIO */
+.repositorio-item {
+  transform: translateX(113.5px);
+}
+
+.repositorio-icon {
+  transform: scale(1.1, 1.2) translate(-11px, 1.2px);
+}
+
+/* Estilos del nav expandido del header */
 header nav.expanded {
   left: 300px;
 }
 
+/* Estilos del logo del header */
 header .logo img {
   height: 40px;
 }
 
+/* Estilos de la lista del header */
 header ul {
   list-style: none;
   display: flex;
@@ -39,10 +103,12 @@ header ul {
   padding: 0;
 }
 
+/* Estilos de los items de la lista del header */
 header ul li {
   margin-right: 20px;
 }
 
+/* Estilos de los enlaces de la lista del header */
 header ul li a {
   text-decoration: none;
   font-family: sans-serif;
@@ -52,12 +118,13 @@ header ul li a {
   line-height: 23px;
 }
 
+/* Estilos de la información del usuario en el header */
 header .user-info {
   display: flex;
-  flex-direction: column;
-  align-items: flex-end;
+  align-items: flex-start;
 }
 
+/* Estilos de los textos del usuario en el header */
 header .user-info span {
   font-family: sans-serif;
   font-weight: 500;
@@ -66,6 +133,7 @@ header .user-info span {
   color: rgb(65, 60, 60);
 }
 
+/* Estilos de la información adicional del usuario en el header */
 header .user-info .header-info {
   font-family: sans-serif;
   font-weight: 500;
@@ -74,16 +142,84 @@ header .user-info .header-info {
   color: rgb(169, 168, 168);
 }
 
+/* Estilos de las imágenes de la lista del header */
+header nav ul li img {
+  width: 15px;
+  height: 15px;
+}
+
+/* Estilos de las imágenes de los iconos del header */
+header nav .icons img {
+  width: 15px;
+  height: 15px;
+}
+
+/* Estilos de la imagen del usuario en el header */
+header .user-info img {
+  margin-right: 10px;
+  margin-bottom: 5px;
+}
+
+/* Estilos de los textos del usuario en el header */
+header .user-info .textos {
+  display: flex;
+  flex-direction: column;
+  transform: translateX(-23px);
+  letter-spacing: 0.5px;
+}
+
+/* Estilos de la información del usuario */
+/* LÍNEA VERTICAL AL COSTADO DEL PERFIL */
+.user-info::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 216.05px;
+  bottom: 0;
+  width: 0.3px;
+  background-color: rgba(240, 240, 240, 255);
+}
+
+/* Estilos de la imagen del usuario */
+.user-info img {
+  transform: translate(-32px, 12.2px) scale(1.2);
+}
+
+/* Estilos de la información adicional del usuario */
+.header-info {
+  transform: translateY(-0.8px);
+}
+
+/* Estilos de la imagen del usuario en el nav */
+header nav .user-info img {
+  width: 15px;
+  height: 15px;
+}
+
+.icons {
+  position: absolute;
+  top: 0;
+  right: 20px;
+}
+
+.icons img {
+  transform: translateX(-202px) translateY(22px) scale(1.3);
+  margin-right: 25px;
+}
+
+/* Estilos del contenido */
 .content {
   display: flex;
   flex: 1;
 }
 
+/* Estilos del logo */
 .logo {
   position: relative;
   top: 2px;
 }
 
+/* Estilos de la imagen del logo */
 .logo img {
   max-width: 50px;
   height: auto;
@@ -92,6 +228,7 @@ header .user-info .header-info {
   height: 55px;
 }
 
+/* Estilos del logo extendido */
 .logo-extended {
   width: 85px;
   height: 66px;
@@ -105,6 +242,7 @@ header .user-info .header-info {
   overflow: visible;
 }
 
+/* Estilos del borde debajo del logo */
 .logo::after {
   content: "";
   display: block;
@@ -116,6 +254,7 @@ header .user-info .header-info {
   left: -20px;
 }
 
+/* Estilos del aside */
 aside {
   background-color: rgb(255, 10, 63);
   color: rgb(255, 206, 217);
@@ -131,22 +270,26 @@ aside {
   height: 100vh;
 }
 
+/* Estilos del aside en hover */
 aside:hover {
   width: 260px;
 }
 
+/* Estilos de la lista del aside */
 aside ul {
   list-style-type: none;
   padding: 0;
   margin: 16.19px 0 0 0;
 }
 
+/* Estilos de los items de la lista del aside */
 aside ul li {
   margin-bottom: 1px;
   margin-left: -10px;
   transform: translateY(10px);
 }
 
+/* Estilos de los enlaces de la lista del aside */
 aside ul li a {
   display: flex;
   align-items: center;
@@ -163,11 +306,13 @@ aside ul li a {
   transition: color 0.3s;
 }
 
+/* Estilos de los textos de los enlaces de la lista del aside */
 aside ul li a span {
   margin-left: 10px;
   display: inline-block;
 }
 
+/* Estilos de los enlaces del aside */
 aside a {
   text-decoration: none;
   color: inherit;
@@ -187,6 +332,7 @@ aside a {
   transition: background-color 0.3s;
 }
 
+/* Estilos de los textos de los enlaces del aside */
 aside a span {
   margin-left: 10px;
   display: inline-block;
@@ -194,22 +340,118 @@ aside a span {
   height: 20px;
 }
 
+/* Estilos de los enlaces del aside */
 aside a::after {
   content: "";
 }
 
+/* Estilos de los items de la lista del aside en hover */
 aside li:hover {
   color: #fff;
 }
 
+/* Estilos de los enlaces del aside en hover */
 aside a:hover {
   background-color: rgba(226, 22, 88, 1);
 }
 
+/* Estilos de los enlaces del aside con clase inicio */
 aside ul li a.inicio {
   background-color: rgba(226, 22, 88, 1);
 }
 
+/* DISEÑO PARA "INICIO" */
+aside ul li a.inicio {
+  background-image: url("/static/images/ico_home.png");
+  background-repeat: no-repeat;
+  background-size: 20px;
+  background-position: -25px center;
+  padding-left: 40px;
+  transform: scaleY(1.04) translateY(1px) translateX(-1px);
+}
+
+/* DISEÑO PARA "MIS TRÁMITES" */
+aside ul li a.mis_trámites {
+  background-image: url("/static/images/ico_bookshop.png");
+  background-repeat: no-repeat;
+  background-size: 18px 20.38px;
+  background-position: -24.40px 1px;
+  padding-left: 40px;
+  filter: opacity(0.66) drop-shadow(0 0 0 rgb(255, 206, 217));
+}
+
+aside ul li a.mis_trámites:hover {
+  filter: none;
+}
+
+/* DISEÑO PARA "PAGOS EN LÍNEA" */
+aside ul li a.pagos_en_linea {
+  background-image: url("/static/images/ico_card.png");
+  background-repeat: no-repeat;
+  background-size: 20px;
+  background-position: -25px center;
+  padding-left: 40px;
+  filter: opacity(0.66) drop-shadow(0 0 0 rgb(255, 206, 217));
+}
+
+aside ul li a.pagos_en_linea:hover {
+  filter: none;
+}
+
+/* DISEÑO PARA "INFORMACIÓN ACADÉMICA" */
+.informacion_academica {
+  background-image: url("/static/images/ico_file.png");
+  background-repeat: no-repeat;
+  background-size: 20px 19px;
+  background-position: -25px center;
+  padding-left: 40px;
+  text-decoration: none;
+  color: inherit;
+  font-size: 15px;
+  line-height: 23px;
+  font-weight: 400;
+  display: flex;
+  align-items: center;
+  background-origin: content-box;
+  white-space: nowrap;
+  overflow: hidden;
+  transition: background-color 0.3s;
+  filter: opacity(0.66) drop-shadow(0 0 0 rgb(255, 206, 217));
+}
+
+.informacion_academica:hover {
+  filter: none;
+}
+
+/* DISEÑO PARA "PORTAL DE BIBLIOTECA" */
+aside ul li a.portal_de_biblioteca {
+  background-image: url("/static/images/ico_book.png");
+  background-repeat: no-repeat;
+  background-size: 18px 19px;
+  background-position: -25px center;
+  padding-left: 40px;
+  filter: opacity(0.66) drop-shadow(0 0 0 rgb(255, 206, 217));
+}
+
+aside ul li a.portal_de_biblioteca:hover {
+  filter: none;
+}
+
+/* DISEÑO PARA "CAMBIAR MI CONTRASEÑA" */
+aside ul li a.cambiar_mi_contraseña {
+  background-image: url("/static/images/ico_padlock.png");
+  background-repeat: no-repeat;
+  background-size: 16px 20px;
+  background-position: -25px center;
+  padding-left: 40px;
+  filter: opacity(0.66) drop-shadow(0 0 0 rgb(255, 206, 217));
+}
+
+aside ul li a.cambiar_mi_contraseña:hover {
+  filter: none;
+}
+
+/* Estilos del main */
 main {
   flex-grow: 1;
   padding: 20px;
@@ -219,18 +461,21 @@ main {
   justify-content: center;
 }
 
+/* Estilos del contenido central del main */
 main .center-content {
   width: 100%;
   max-width: 1000px;
   text-align: center;
 }
 
+/* Estilos del título del main */
 main h1 {
   margin-top: 0;
   font-weight: normal;
   color: #333;
 }
 
+/* Estilos de la grilla de tarjetas */
 .cards {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -238,6 +483,7 @@ main h1 {
   justify-items: center;
 }
 
+/* Estilos de las tarjetas */
 .card {
   background-color: #fff;
   border-radius: 10px;
@@ -247,17 +493,20 @@ main h1 {
   text-align: center;
 }
 
+/* Estilos del título de la tarjeta */
 .card h2 {
   margin-top: 0;
   font-weight: normal;
   color: #ff3366;
 }
 
+/* Estilos del párrafo de la tarjeta */
 .card p {
   color: #666;
   font-size: 14px;
 }
 
+/* Estilos del botón de la tarjeta */
 .card button {
   background-color: #fff;
   border: 1px solid #ff3366;
@@ -268,11 +517,13 @@ main h1 {
   padding: 10px 20px;
 }
 
+/* Estilos del botón de la tarjeta en hover */
 .card button:hover {
   background-color: #ff3366;
   color: #fff;
 }
 
+/* Estilos del footer */
 footer {
   background-color: #fff;
   padding: 5px;
@@ -288,14 +539,17 @@ footer {
   border-top: 1px solid rgba(228, 228, 228, 1);
 }
 
+/* Estilos del footer expandido */
 footer.expanded {
   left: 300px;
 }
 
+/* Estilos del párrafo del footer expandido */
 footer.expanded p {
   transform: translateX(-155px) translateY(-12px);
 }
 
+/* Estilos del párrafo del footer */
 footer p {
   font-family: sans-serif;
   font-style: normal;
@@ -307,7 +561,7 @@ footer p {
   transform: translateX(-40px) translateY(-12px);
 }
 
-/* Estilos para el modal */
+/* Estilos del modal */
 .modal {
   display: none;
   position: fixed;
@@ -323,6 +577,7 @@ footer p {
   justify-content: center;
 }
 
+/* Estilos del contenedor del modal */
 .modal-container {
   background-color: #fefefe;
   margin: 5% auto;
@@ -334,6 +589,7 @@ footer p {
   box-sizing: border-box;
 }
 
+/* Estilos del header del modal */
 .modal-header {
   display: flex;
   justify-content: space-between;
@@ -343,6 +599,7 @@ footer p {
   margin: 0 -20px;
 }
 
+/* Estilos del títulodel modal */
 .modal-title {
   font-family: sans-serif;
   font-weight: 500;
@@ -356,6 +613,7 @@ footer p {
   margin: 0;
 }
 
+/* Estilos del contenedor interno del modal */
 .inner-container {
   background-color: white;
   padding: 10px;
@@ -368,10 +626,12 @@ footer p {
   margin-bottom: 25px;
 }
 
+/* Estilos del contenido del modal */
 .modal-content {
   text-align: center;
 }
 
+/* Estilos del botón de cierre del modal */
 .close {
   color: #aaa;
   font-size: 28px;
@@ -379,18 +639,20 @@ footer p {
   cursor: pointer;
 }
 
+/* Estilos del botón de cierre del modal en hover */
 .close:hover,
 .close:focus {
   color: black;
   text-decoration: none;
 }
 
+/* Estilos de la imagen del modal */
 .modal img {
   width: 100%;
   height: auto;
 }
 
-/* Estilos para el contenedor del carrusel */
+/* Estilos del contenedor del carrusel */
 .carousel-container {
   position: relative;
   width: 97%;
@@ -399,16 +661,19 @@ footer p {
   margin: 12px auto;
 }
 
+/* Estilos de la imagen del carrusel */
 .carousel-image {
   display: none;
   width: 100%;
   height: auto;
 }
 
+/* Estilos de la imagen activa del carrusel */
 .carousel-image.active {
   display: block;
 }
 
+/* Estilos de las flechas del carrusel */
 .carousel-arrow {
   position: absolute;
   top: 50%;
@@ -418,19 +683,23 @@ footer p {
   opacity: 0.7;
 }
 
+/* Estilos de la flecha izquierda del carrusel */
 .carousel-arrow-left {
   left: 30px;
 }
 
+/* Estilos de la flecha derecha del carrusel */
 .carousel-arrow-right {
   right: 30px;
 }
 
+/* Estilos de la imagen de las flechas del carrusel */
 .carousel-arrow img {
   width: 32px;
   height: 32px;
 }
 
+/* Estilos de las flechas del carrusel en hover */
 .carousel-arrow:hover {
   opacity: 1;
   filter: brightness(0) invert(1);
@@ -447,6 +716,7 @@ footer p {
   z-index: -1;
 }
 
+/* Estilos de las flechas del carrusel */
 .carousel-arrow-left::before {
   left: -50px;
 }
@@ -455,6 +725,7 @@ footer p {
   right: -50px;
 }
 
+/* Estilos del título principal */
 .main-title {
   font-family: sans-serif;
   font-weight: 500;
@@ -464,6 +735,7 @@ footer p {
   margin-bottom: 10px;
 }
 
+/* Estilos del subtítulo */
 .sub-title {
   font-family: sans-serif;
   font-weight: 500;
@@ -473,17 +745,20 @@ footer p {
   margin-bottom: 20px;
 }
 
+/* Estilos del texto de introducción */
 .intro-text {
   position: relative;
   top: 72px;
 }
 
+/* Estilos del título principal */
 .main-title {
   position: relative;
   left: 174.5px;
   letter-spacing: 0.5px;
 }
 
+/* Estilos del subtítulo */
 .sub-title {
   position: relative;
   top: -11px;
@@ -491,6 +766,7 @@ footer p {
   letter-spacing: 0.5px;
 }
 
+/* Estilos del título del modal */
 .modal-title {
   font-family: sans-serif;
   font-weight: 500;
@@ -499,7 +775,7 @@ footer p {
   line-height: 36px;
 }
 
-/* MENÚ DE OPCIONES */
+/* Estilos del menú de opciones */
 .dropdown-toggle {
   position: relative;
 }
@@ -512,10 +788,12 @@ footer p {
   margin-top: 2px;
   transform: rotate(90deg);
   transition: transform 0.3s ease-in-out;
+  filter: grayscale(100%) opacity(0.5);
 }
 
-.dropdown-span.active.dropdown-arrow {
+.dropdown-span.active .dropdown-arrow.active {
   transform: rotate(0deg);
+  filter: none;
 }
 
 .dropdown-toggle span {
@@ -534,6 +812,7 @@ footer p {
   transform: translateY(-50%) rotate(180deg);
 }
 
+/* Estilos del submenu */
 .submenu {
   display: none;
   position: absolute;
@@ -565,7 +844,7 @@ footer p {
   padding-left: 20px;
 }
 
-/* Agrega esta clase para mover los elementos cuando el menú esté abierto */
+/* Estilos para mover los elementos cuando el menú esté abierto */
 .submenu-open {
   position: relative;
   top: 170px;
